--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </table>
   
   <form method="POST" name="f">
-    <P>Enter incline, speed and two of: running time, distance.</p>
+    <P>Enter incline and two of: speed, running time, distance.</p>
  
   
   <table border="0" cellpadding="2" cellspacing="0" bgcolor="#ffffff" width="75%">
