--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="description" content="Treadmill equivalent exercise calculator" />
   <TITLE>Treadmill Calculator</TITLE>
 
-  <script src="script.js"></script>    
+  <script src="constants.js"></script>    
+  <script src="functions.js"></script>    
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
   <script src="http://code.highcharts.com/1.2.5/highcharts.js"></script>
       
