--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <script src="constants.js"></script>    
   <script src="functions.js"></script>    
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
-  <script src="http://code.highcharts.com/1.2.5/highcharts.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
+  <script src="https://code.highcharts.com/1.2.5/highcharts.js"></script>
       
 </HEAD>
 
