fixed origninal version

--- a/index2.html
+++ b/index2.html
@@ -205,7 +205,7 @@
 </html>
 
 <script type="text/javascript" src="constants.js"></script>
-<script type="text/javascript" src="functions.js"></script>
+<script type="text/javascript" src="functions2.js"></script>
 
 <script type="text/javascript" src="events.js"></script>
 <script type="text/javascript" src="table.js"></script>
