--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   
   <hr />
     
-    <div id="fulltable"></div>    
+    <div id="table-tab-div" style="width: 100%"></div>    
     <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
   </form>
 </CENTER>
